# bcomp-compiler

./: .gitignore  LICENSE  README.md  bcomp-compiler.cabal  bcomp-compiler.tar.zst
app/: Bcomp.hs  Defs.hs  Main.hs  Mangle.hs  Ops.hs  Optimize.hs  Parse.hs  Prepare.hs  Tools.hs  Translate.hs
app/Language/: AST.hs
app/Optimize/: Int16.hs  PostOptimize.hs  PreEvaluate.hs
app/Prepare/: Rename.hs
app/Translate/: Layout.hs
app/Translator/: Context.hs
test/: TestMain.hs
