cabal-version:   3.0
name:            bcomp-compiler
synopsis:        Compiler for basic computer (bcomp-ng) of ITMO University
version:         0.2.1.0
license:         MIT
license-file:    LICENSE
author:          Vladimir Lesnikov
maintainer:      v.a.lesnikov@vk.com
category:        Development
build-type:      Simple
extra-doc-files: README.md
stability:       alpha
homepage:        https://github.com/valesnikov/bcomp-compiler
bug-reports:     https://github.com/valesnikov/bcomp-compiler/issues

common build-directives
  build-depends:    base >=4.16 && <5
  ghc-options:      -Wall -Wextra
  default-language: GHC2021

executable bcompc
  import:         build-directives
  main-is:        Main.hs
  other-modules:
    Bcomp
    Language.AST
    Mangle
    Optimize.Int16
    Optimize.PostOptimize
    Optimize.PreEvaluate
    Parse
    Prepare
    Tools
    Translate
    Translate.Layout
    Translator.Context

  build-depends:
    , containers
    , mtl
    , optparse-applicative
    , parsec
    , transformers

  hs-source-dirs: app

test-suite bcomp-compiler-test
  import:         build-directives
  type:           exitcode-stdio-1.0
  main-is:        TestMain.hs
  other-modules:
    Bcomp
    Language.AST
    Mangle
    Optimize.Int16
    Optimize.PostOptimize
    Optimize.PreEvaluate
    Parse
    Prepare
    Tools
    Translate
    Translate.Layout
    Translator.Context

  build-depends:
    , containers
    , mtl
    , parsec
    , transformers

  hs-source-dirs:
    app
    test
